# SequenceCpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Sequence.cpp  Sequence.h
